# PrintPartnerPartner

./: .dockerignore  .gitignore  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  COMMERCIAL.md  Dockerfile  LICENSE  LICENSE-SUMMARY.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.saas.yml  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: manifest-problem.yml  manifest-submission.yml
.github/workflows/: build-artifacts.yml  build-reusable.yml  ci.yml  pages.yml  release-dispatch.yml  release.yml  validate-manifests.yml  web-ci.yml
docs/: 3MF_EXPORT_VALIDATION.md  API.md  ARCHITECTURE.md  INSTALL.md  README.md  RELEASE_SMOKE_TEST.md  index.html  kit-catalog.yaml  path-hints.yaml
docs/examples/: golden-ldo-voron-2.4-export.md  golden-ldo-voron-2.4-sb-tap.md  template-addon-pick_any.manifest.yaml  template-addon-pick_one.manifest.yaml  template-addon-replaces.manifest.yaml  template-base.manifest.yaml
docs/integrations/: SPOOLMAN.md
docs/playbooks/: author-manifest-on-stack.md  kit-studio-build.md
docs/screenshots/: README.md
docs/scripts/: capture-screenshots.mjs  package-lock.json  package.json
manifests/: README.md
manifests/schema/: print-partner-manifest-v1.json  print-partner-manifest-v2.json
packaging/: README_RELEASE.md  THUMBNAILS_AND_BUNDLE.md  build_release.sh  changelog_release_body.py  make_dmg.sh  notarize_macos.sh  package_artifacts.sh  print_partner.spec  verify_macos_numpy.py  verify_release_version.py
tests/: conftest.py  test_ai_client.py  test_ai_context.py  test_ai_executor.py  test_ambrosia_catalog.py  test_app_settings.py  test_build_wizard_finish.py  test_bulk_filament.py  test_checkoff_missing.py  test_custom_filaments.py  test_datetime_display.py  test_export_3mf.py  test_export_html.py  test_export_kit_bundle.py  test_export_stl_zip.py  test_filament_assigner.py  test_filament_color_resolve.py  test_filament_resolve.py  test_git_sync_remote.py  test_import_rules.py  test_legal_files.py  test_merge.py  test_mesh_color.py  test_parsers.py  test_part_filament.py  test_parts_curation_bulk.py  test_parts_grouping.py  test_parts_suggestions.py  test_parts_tree.py  test_path_picker.py  test_path_tree.py  test_plate_packer.py  test_plate_plan.py  test_plate_plan_pool.py  test_plate_preview.py  test_print_checklist_filter.py  test_print_plan_grouping.py  test_print_progress.py  test_print_units_batch.py  test_profile_addon_layers.py  (+23 more)
web/: CHANGELOG.md  DEPLOY.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
(+402 files in other folders)
