[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "print-partner"
version = "0.1.0"
description = "Local-first desktop app for layered 3D print part manifests from GitHub STL repos"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6",
    "GitPython>=3.1",
    "pyvista>=0.43",
    "pyvistaqt>=0.11",
    "trimesh>=4.0",
    "rapidfuzz>=3.0",
    "jinja2>=3.1",
    "markdown>=3.5",
    "httpx>=0.27",
    "Pillow>=10.0",
    "pydantic-settings>=2.0",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
print-partner = "print_partner.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
print_partner = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
