[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "print-partner"
version = "0.3.1"
description = "Local-first desktop app for layered 3D print part manifests from GitHub STL repos"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Chad Lynch" }]
# Standard non-commercial terms; plain-language overview in LICENSE-SUMMARY.md.
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE", "LICENSE-SUMMARY.md", "COMMERCIAL.md"]
dependencies = [
    "numpy>=1.26.4,<2",
    "PySide6>=6.6",
    "GitPython>=3.1",
    "pyvista>=0.43",
    "trimesh>=4.0",
    "rapidfuzz>=3.0",
    "jinja2>=3.1",
    "markdown>=3.5",
    "httpx>=0.27",
    "Pillow>=10.0",
    "pydantic-settings>=2.0",
    "SQLAlchemy>=2.0",
    "lib3mf>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
    "pyinstaller-hooks-contrib>=2024.0",
    "ruff>=0.5",
]

[project.scripts]
print-partner = "print_partner.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
print_partner = ["data/*.json", "data/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "UP042", "B905", "B007", "UP017", "UP035"]

[tool.ruff.lint.per-file-ignores]
"src/print_partner/db/models.py" = ["UP"]
